--- a/plugins/redmine_mtr/app/views/mtr_test/mtr_test.html.erb
+++ b/plugins/redmine_mtr/app/views/mtr_test/mtr_test.html.erb
@@ -1,2 +1,4 @@
 <%= text_field_tag 'test', params[:test], :tabindex => '1', :class => 'form-control input-lg',
                    :class => 'login-input', :style => 'width: 100%'%>
+
+<input type="text" name="test" id="test">
