--- a/plugins/redmine_zz5/app/views/workdays/_single_worktimes_view.html.erb
+++ b/plugins/redmine_zz5/app/views/workdays/_single_worktimes_view.html.erb
@@ -24,7 +24,7 @@
              :locals => {:title => l(:zz5_break_duration),
                          :id => 'break',
                          :value => '{{day.break}}' ,
-                         :model => 'day.break',
+                         :model => 'day.daybreak',
                          :error_msg => l(:zz5_worktime_err_empty),
                          :id_int => 2
              }
