--- a/plugins/redmine_mtr/app/views/mtr_welcome/mtr_index.html.erb
+++ b/plugins/redmine_mtr/app/views/mtr_welcome/mtr_index.html.erb
@@ -9,6 +9,7 @@
     <%= javascript_include_tag "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" %>
     <%= javascript_include_tag "worktime.js", :plugin => 'redmine_mtr' %>
 
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <% end %>
 
 <div id="login-form" class="modal show" tabindex="-1" role="dialog" aria-hidden="true">
