--- a/plugins/redmine_mtr/app/views/mtr_account/mtr_login.html.erb
+++ b/plugins/redmine_mtr/app/views/mtr_account/mtr_login.html.erb
@@ -27,15 +27,15 @@
                 <div class="modal-body form-group" width="100%">
                     <div style="padding-top: 5px;" width="80%">
                         <%= text_field_tag 'username', params[:username], :tabindex => '1', :class => 'form-control input-lg',
-                                           :class => 'login-input', :style => 'width: 80%'%>
+                                           :class => 'login-input', :style => 'width: 100%'%>
                     </div>
-                    <div style="padding-top: 5px;" width="80%">
+                    <div style="padding-top: 5px;" width="100%">
                         <%= password_field_tag 'password', nil, :tabindex => '2', :class => 'form-control input-lg',
-                                               :class => 'login-input', :style => 'width: 80%'%>
+                                               :class => 'login-input', :style => 'width: 100%'%>
                     </div>
-                    <div style="padding-top: 5px;" width="80%">
+                    <div style="padding-top: 5px;" width="100%">
                         <input type="submit" style="height: 38px" class="form-control input-lg btn btn-danger"
-                               name="loginMtr" value="<%=l(:button_login)%> &#187;" tabindex="5" width="80%"/>
+                               name="loginMtr" value="<%=l(:button_login)%> &#187;" tabindex="5" width="100%"/>
                     </div>
                     <% flash.each do |key, value| %>
                       <div style="padding-top: 5px;">
@@ -49,6 +49,11 @@
         </div>
     <% end %>
 </div>
+
+
+<style>
+  body {width:  0}
+</style>
 
 <% if params[:username].present? %>
     <%= javascript_tag "$('#password').focus();" %>
